# llm-from-scratch

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  ch1.py  main.py  pyproject.toml
.windsurf/rules/: python.md
